--- a/index.html
+++ b/index.html
@@ -43,9 +43,19 @@
 </a>
         
 <a href="https://wlsgml8847.github.io/first/">
-<h3>▷1st gallery◁</h3>
+<h3>▶1st gallery◀</h3>
 </a>      
-
+<a href="https://wlsgml8847.github.io/remake1/">
+<h3>▷remake1◁</h3>
+</a>  
+   
+<a href="https://wlsgml8847.github.io/remake2/">
+<h3>▷remake2◁</h3>
+</a>  
+   
+<a href="https://wlsgml8847.github.io/remake3/">
+<h3>▷remake3◁</h3>
+</a>  
 
 <h2 style="background-color:white; color:lightblue; font-size:200%; text-align:center">첫번째 작품 <하늘을 떠다니는 동물>입니다. </h2>
 </body>
